* of Processors.                                                               *
* See details at http://avr-eclipse.sourceforge.net                            *
********************************************************************************
$Id$

================================================================================
Version 2.3.2 []

Fixes:
-----------------------------
* Bug 2715567: Tool Settings: Assembler Debug Format not inhibited
* Bug 2872447: getWinAVRBasePath throws exception on Vista 64
  
================================================================================
Version 2.3.1 [04. December 2008]

Fixes:
-----------------------------
* Fixed Bug that could cause the plugin to fail completely under some circumstances.
  (java.lang.NoClassDefFoundError)
  
================================================================================
Version 2.3.0 [02. December 2008]

New:
-----------------------------
* Support for Fuses / LockBits files
  - Two new wizards to create fuse and lockbit files (New -> Other -> AVR -> ....)
  - An editor to edit these files.
  - The files can be selected as the fuses / lockbits source on the AVRDude property
    Fuses / Lockbits pages.

* Detailed preview of the selected fuse bytes on the project 
  AVRDude property Fuses / Lockbits pages. 


Changed / Improved:
-----------------------------
* ATXmega processors are now fully supported. (Except for the upload with 
  avrdude because avrdude 5.5 does not yet support the ATXmega line.)
  
* The AVRDude project properties now have a new field "other options" to add
  avrdude options not supported by the plugin. (As of version 2.3 the plugin
  supports all options for avrdude version 5.5).

* Improved path handling.
  All system paths are now saved in a persistent cache, so they need to be
  searched only once. 
  By default the plugin will still search all paths at startup, but this can
  be inhibited on the AVR preference page. Once inhibited any system 