@@ -18,7 +18,8 @@ Require-Bundle:
  org.eclipse.jface.text,
  org.eclipse.ui.forms,
  org.eclipse.ui.console,
- org.eclipse.ui.editors
+ org.eclipse.ui.editors,
+ org.eclipse.core.expressions
 Export-Package: de.innot.avreclipse;
   uses:="org.eclipse.core.runtime,
    org.eclipse.jface.resource,
